Ida -Added music class and music audio and  modified getFirst method , it should be get(0). Created audio folder